--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-d3-cloud": "^1.0.6",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
