--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ag-grid-react": "^31.2.0",
+    "chart.js": "^4.4.2",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "d3": "^7.9.0",
     "d3-cloud": "^1.2.7",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-d3-cloud": "^1.0.6",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
